[package]
name = "dhalia"
version = "0.0.1"
description = "A parser combinator as a trait."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/dhalia"
keywords = ["parser-combinator", "parser"]
categories = ["parsing"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[features]
default = ["std"]
std = []

[dependencies]
